--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,6 +6,22 @@
          version="3.1"
          metadata-complete="false">
 
+    <filter>
+        <filter-name>kcFilter</filter-name>
+        <filter-class>cn.lhl.web.dwk01.filter.MyKcFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>kcFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    <filter>
+        <filter-name>myFilter</filter-name>
+        <filter-class>cn.lhl.web.dwk01.filter.MyFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>myFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
